<?xml version="1.0" encoding="utf-8"?>





<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>


    <ImageView
        android:id="@+id/fleche"
        android:src="@drawable/ic_fleche_gauche"
        android:layout_width="40dp"
        android:layout_height="40dp"

        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button_content_description" />


    <ImageButton
        android:id="@+id/like_button"
        android:src="@drawable/ic_like_off"
        android:layout_width="40dp"
        android:layout_height="40dp"

        app:layout_constraintRight_toLeftOf="@id/v_right_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/favoris_button_content_description" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/artist_image"
            android:layout_width="match_parent"
            android:layout_height="238dp"

            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="150dp"

            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>


        <TextView
            android:id="@+id/artist_country"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="200dp"

            android:textSize="15sp"
            android:textColor="#FFFFFF"/>


        <TextView
            android:id="@+id/artist_genre"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="200dp"

            android:textSize="15sp"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>



    <TextView
        android:id="@+id/artist_description"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toStartOf="@+id/v_right_guideline"
        app:layout_constraintLeft_toRightOf="@id/v_left_guideline"
        app:layout_constraintRight_toLeftOf="@id/v_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/v_left_guideline"
        app:layout_constraintTop_toBottomOf="@id/relative_layout" />

    <TextView
        android:id="@+id/album_title"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"

        android:text="@string/albums_artist_profil"

        app:layout_constraintTop_toBottomOf="@+id/artist_description"
        app:layout_constraintLeft_toRightOf="@id/v_left_guideline"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/album_list"
        android:layout_width="0dp"
        android:layout_height="150dp"

        app:layout_constraintTop_toBottomOf="@+id/album_title"
        app:layout_constraintLeft_toRightOf="@id/v_left_guideline"
        app:layout_constraintRight_toLeftOf="@id/v_right_guideline"
        app:layout_constraintBottom_toTopOf="@id/song_title"/>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:text="@string/top_10_tracks"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/album_list"
        app:layout_constraintLeft_toRightOf="@id/v_left_guideline"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="0dp"
        android:layout_height="190dp"


        app:layout_constraintLeft_toRightOf="@id/v_left_guideline"
        app:layout_constraintRight_toLeftOf="@id/v_right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/song_title"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>