<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>


    <TextView
        android:id="@+id/searchLayout_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintRight_toRightOf="@id/v_right_guideline"

        android:text="@string/search"
        android:textStyle="bold"
        android:textSize="40sp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="35dp"

        app:layout_constraintTop_toBottomOf="@id/searchLayout_title"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintRight_toRightOf="@id/v_right_guideline">

        <ImageView
            android:id="@+id/search_magnifier"
            android:src="@drawable/ic_recherche_loupe"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"

            app:layout_constraintTop_toTopOf="@id/search_bar"
            app:layout_constraintLeft_toLeftOf="@id/search_bar"
            app:layout_constraintRight_toLeftOf="@id/search_box"/>


        <EditText
            android:id="@+id/search_box"
            android:layout_width="300dp"
            android:layout_height="34dp"

            app:layout_constraintLeft_toRightOf="@id/search_magnifier"
            app:layout_constraintTop_toTopOf="@id/search_bar"/>


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"

            android:background="@drawable/ic_recherche_annuler"

            app:layout_constraintTop_toTopOf="@id/search_bar"
            app:layout_constraintLeft_toRightOf="@id/search_box"
            app:layout_constraintRight_toRightOf="@id/search_bar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/artists"
        android:textSize="30sp"

        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintRight_toRightOf="@id/v_right_guideline"/>


    <ListView
        android:id="@+id/search_artist_list"
        android:layout_width="0dp"
        android:layout_height="250dp"

        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintRight_toRightOf="@id/v_right_guideline"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        app:layout_constraintTop_toBottomOf="@id/search_artist_list"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintRight_toRightOf="@id/v_right_guideline"

        android:text="@string/album"
        android:textSize="30sp"/>


    <ListView
        android:id="@+id/search_album_list"
        android:layout_width="0dp"
        android:layout_height="250dp"

        app:layout_constraintTop_toBottomOf="@+id/album"
        app:layout_constraintLeft_toLeftOf="@id/v_left_guideline"
        app:layout_constraintRight_toRightOf="@id/v_right_guideline"/>




</androidx.constraintlayout.widget.ConstraintLayout>